...
                    }

                    Spacer(modifier = Modifier.height(6.dp))

                    // Name field
                    Text(
                        text = "Nama",
                        fontFamily = poppinsFontFamily,
                        fontWeight = FontWeight.Bold,
                        fontSize = 14.sp,
                        color = colorResource(id = R.color.primary),
                        textAlign = TextAlign.Start
                    )
...

                    Spacer(modifier = Modifier.height(6.dp))

                    // Gender dropdown
                    val options = listOf("Laki-laki", "Perempuan")
                    Text(
                        text = "Jenis Kelamin",
                        fontFamily = poppinsFontFamily,
                        fontWeight = FontWeight.Bold,
                        fontSize = 14.sp,
                        color = colorResource(id = R.color.primary),
                        textAlign = TextAlign.Start
                    )
...
                    )

                    Spacer(modifier = Modifier.height(6.dp))

                    // Birth date field
                    Text(
                        text = "Tanggal Lahir",
                        fontFamily = poppinsFontFamily,
                        fontWeight = FontWeight.Bold,
                        fontSize = 14.sp,
                        color = colorResource(id = R.color.primary),
                        textAlign = TextAlign.Start
                    )
...
