...
                        keyboardController?.hide()
                    }
                ),
                modifier = Modifier
                    .fillMaxWidth()
                    .focusRequester(focusRequester)
                    .testTag("OtpTextField"),
                textStyle = TextStyle(
                    fontSize = 1.sp,
                    color = Color.Transparent
                ),
                decorationBox = { innerTextField ->
                    Row(
...
                }
            }
        }

        // Verify button
        PrimaryButton(
            text = "Verifikasi",
            onClick = {
                val isValid = viewModel.validateOtpFields()
                if (isValid) {
                    viewModel.verifyOtp()
                }
            },
...
